...
                    </Text>
                  </TouchableOpacity>
                )}
              </View>

              <TouchableOpacity
                testID="updateButton"
                onPress={handleUpdate}
                style={styles.submitButton}
              >
                <Text style={styles.submitText}>Update Promotion</Text>
              </TouchableOpacity>
            </>
...
