...
      .map((item) => `• ${item.measure || ''} ${item.ingredient}`)
      .join('\n');
      // format the share message
      const shareMessage = `Here's a recipe from BarBuddy!\n\n`+
                          `🍹 ${drinkData.strDrink} 🍹\n\n` +
                          `${aiDescription ? aiDescription + '\n\n' : ''}` +
                          `Ingredients:\n${formattedIngredients}\n\n` +
                          `Instructions:\n${drinkData.strInstructions}`;
      
      //share the message                    
      await Share.share({
        message: shareMessage,
      });
...
      {/* Drink details screen header */}
      <StatusBar translucent backgroundColor="transparent" barStyle="light-content" />
      <ScrollView contentContainerStyle={{ paddingBottom: 40 }}>
        
        {/* Back Button */}
        <TouchableOpacity style={styles.backButton} onPress={() => router.back()}>
          <Ionicons testID="back-button" name="arrow-back" size={28} color="white" />
        </TouchableOpacity>

        {/* Save button and View Saved button */}
        <View style={styles.saveWrapper}>
          {isSaved && (
            <TouchableOpacity style={styles.viewSavedButton} testID="save-button" onPress={() => router.push('/settings/saved')}>
...
